SRC/objects/Transaction_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Transaction Entries</relationshipLabel>
        <relationshipName>Transaction_Entries</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Debit</fullName>
                </value>
                <value>
                    <fullName>Credit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Balance__c</fullName>
        <label>Updated Balance</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Transaction Entry</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>TX-{000000}</displayFormat>
        <label>Transaction Entry Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Transaction Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_Status_Inactive</fullName>
        <active>true</active>
        <errorConditionFormula>OR( ISPICKVAL( Contact__r.Contact_Status__c , &quot;Inactive&quot;))</errorConditionFormula>
        <errorMessage>Contact Is Inactive</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Does_Not_Have_Enough_Balance</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Contact__r.Available_Balance__c &lt;= 3000, ISPICKVAL( Type__c , &quot;Debit&quot;))</errorConditionFormula>
        <errorMessage>Available Balance is not enough.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Insufficient_Balance</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Contact__r.Available_Balance__c &lt; Amount__c , ISPICKVAL( Type__c , &quot;Debit&quot;) )</errorConditionFormula>
        <errorMessage>Insufficient Balance</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Maximum_Debit_Allowed_Per_Transaction</fullName>
        <active>true</active>
        <errorConditionFormula>AND( Contact__r.Transaction_Limit__r.Maximum_Debit_Allowed_Per_Transaction__c &lt;  Amount__c , ISPICKVAL( Type__c , &quot;Debit&quot;) )</errorConditionFormula>
        <errorMessage>You cannot debit amount .</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Transaction_Date_must_Be_Today</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()  &amp;&amp;  Transaction_Date__c &lt;&gt; TODAY()</errorConditionFormula>
        <errorMessage>Transaction Date must be of today.</errorMessage>
    </validationRules>
</CustomObject>